[package]
name = "louds64-rs"
version = "0.2.0"
authors = ["TechPizza", "Sho Nakatani <lay.sakura@gmail.com>"]
description = "LOUDS (Level-Order Unary Degree Sequence) with 64-bit indices in Rust"
readme = "README.md"
license = "MIT OR Apache-2.0"
repository = "https://github.com/laysakura/louds-rs"
homepage = "https://github.com/laysakura/louds-rs"
keywords = ["louds", "succinct"] # up to 5 keywords, each keyword should have <= 20 chars
categories = ["compression", "data-structures"]
edition = "2021"

[lib]
name = "louds"

[dependencies]
fid64-rs = { version = "0.1", git = "https://github.com/TechPizzaDev/fid-rs.git" }

serde = { version = "1.0", features = ["derive"], optional = true }
mem_dbg = { version = "0.2", optional = true }

[dev-dependencies]
criterion = "0.5"
rand = "0.8"

[features]
serde = ["fid64-rs/serde", "dep:serde"]
mem_dbg = ["dep:mem_dbg", "fid64-rs/mem_dbg"]

[[bench]]
name = "bench"
harness = false
